@@ -13,6 +13,7 @@ Changes from 0.1.2 to 0.1.3
   * new visualisations of the service registry: service providers, using
   bundles, and bundles wiring via services
   * show components as implementations and services as interfaces
+  * graph filter supports basic logical expressions
 
 Changes from 0.1.1 to 0.1.2
 ---------------------------
